--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ body{
     font-family: "Comic Sans MS", "Comic Sans", Arial;
 }
 
-/* Nav*/
+/* Nav and footer*/
 
 .nav, .footer{
     padding-top: 1.5rem;
@@ -44,8 +44,8 @@ h1{
     padding: 2rem;
     min-width: 100%;
     text-align: center;
-    
 }
+
 /* 1st section*/
 
 .orange{
@@ -90,3 +90,16 @@ img{
     padding: 2rem;
 }
 
+@media screen and (max-width: 1024px){
+    .images{
+        grid-template-columns: repeat(1, minmax(0,1fr));
+    }
+
+    li{
+        display: flex;
+        justify-content: center;
+        padding: 0.2rem;
+   }
+
+    
+}
